--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@lonewolfyx/oxlint-config",
     "type": "module",
-    "version": "0.0.0",
+    "version": "0.0.0-alpha.0.1",
     "packageManager": "pnpm@10.15.1",
     "description": "Lonewolfyx's OXLint config preset",
     "author": "lonewolfyx",
