chore: add vitest for test

--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
         "tsdown": "^0.20.3",
         "tsdown-preset": "^1.0.3",
         "tsx": "^4.21.0",
-        "typescript": "^5.9.3"
+        "typescript": "^5.9.3",
+        "vitest": "^4.0.18"
     },
     "publishConfig": {
         "registry": "https://registry.npmjs.org",
