--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
         "lint": "eslint",
         "lint:fix": "eslint --fix",
         "prepublishOnly": "pnpm build",
-        "prepare": "simple-git-hooks"
+        "prepare": "simple-git-hooks",
+        "test": "vitest"
     },
     "devDependencies": {
         "@antfu/eslint-config": "^7.4.3",
         "@lonewolfyx/tsconfig": "^0.0.6",
         "@types/node": "^25.3.0",
+        "c12": "4.0.0-beta.3",
         "eslint": "^10.0.1",
         "lint-staged": "^16.2.7",
         "picocolors": "^1.1.1",
