--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "c12": "4.0.0-beta.3",
         "eslint": "^10.0.1",
         "lint-staged": "^16.2.7",
+        "oxlint": "^1.50.0",
         "picocolors": "^1.1.1",
         "simple-git-hooks": "^2.13.1",
         "tsdown": "^0.20.3",
